// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c1 {
  color: #101113;
  background-color: #ffffff;
}

.c1 > * {
  opacity: 1;
}

.c1.app-canvas {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

<span
  className="c0"
>
  <section
    className="c1"
  >
    <div />
  </section>
</span>
`;

exports[`When using snapshots with the dimmed prop Should render with an element children 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c1 {
  color: #101113;
  background-color: #ffffff;
}

.c1 > * {
  opacity: 0.2;
}

.c1.app-canvas {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

<span
  className="c0"
>
  <section
    className="c1"
  >
    <div />
  </section>
</span>
`;
